Configuracion del server y avances en el client
Co-authored-by: bendeyhe <bdeyheralde@itba.edu.ar>
Co-authored-by: boullo <boullo2002@users.noreply.github.com>