@@ -1,8 +1,18 @@
 #!/bin/bash
+cd "$(dirname "$0")"
 
 PATH_TO_CODE_BASE=`pwd`
 
-#JAVA_OPTS="-Djava.security.debug=access -Djava.security.manager -Djava.security.policy=/$PATH_TO_CODE_BASE/java.policy -Djava.rmi.server.useCodebaseOnly=false"	
+for i in "$@"; do
+    case $i in
+        -D*=*)
+        JAVA_OPTS="$JAVA_OPTS $i"
+        ;;
+        *)
+        break
+        ;;
+    esac
+done
 
 MAIN_CLASS="ar.edu.itba.pod.server.Server"
 
